templates/svc-db.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: db
  name: db
spec:
  ports:
    - name: svc-postgres
      port: 3306
      targetPort: 3306
  selector:
    service: db
